--- a/index.html
+++ b/index.html
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Dog in the house</title>
+    <link rel="stylesheet" href="./style.css" />
     <script src="./script.js" defer></script>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <h1>Doggy Talk</h1>
+    <textarea
+      placeholder="enter text here"
+      id="text-input"
+      cols="30"
+      rows="10"
+    ></textarea>
+    <button id="btn-translate">Translate</button>
+    <div id="result">
+      <p></p>
+    </div>
+  </body>
 </html>
